Refactor curved MPR to improve slider handling, VOI LUT attribute management, and slice sampling logic.